--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-light bg-light shadow">
             <div class="container justify-content-center" style="margin-top: 10px;">
                 
-                <a href="tbrhome.html" class="nav-link  thenav" style="text-decoration: none; color: black;">Home</a>
+                <a href="index.html" class="nav-link  thenav" style="text-decoration: none; color: black;">Home</a>
                 <a href="tbrcreators.html" class="nav-link  thenav" style="text-decoration: none; color: black;">Creators</a>
                 <a href="tbrcontact.html" class="nav-link  thenav" style="text-decoration: none; color: black;">Contact</a>
                 
