--- a/tbrcreators.html
+++ b/tbrcreators.html
@@ -38,7 +38,7 @@
 
                     <span style="font-size: 25px;">Arnav Rastogi is a rising junior at West Windsor-Plainsboro High School South. 
                         He is an avid Saints fan and a huge football fanatic which led him to start The Backfield Rift podcast with a fellow classmate Satvik Srinivas. 
-                        While he's not working on the podcast, Arnav takes part in his school buisness club and investing club as part of his passion for the world of finance and buisness. 
+                        Apart from the podcast, Arnav takes part in his school buisness club and investing club as part of his passion for the world of finance and buisness. 
                         He is also the shaman of his school's fencing team. 
                         In his free time, Arnav loves to game, play the guitar, and learn more about the world of investing.
                     
