--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
 
                 <div class="row text-center">
                     <div class="col-md-12 col-lg-4" style="margin-top: 50px;">
+                        <h3>Episode 5</h3>
+                        <p>Mahomes' Monster Contract & The Patriots' Signing of Cam Newton</p>
+                        <audio controls>
+                            <source src="Episode 5.mp3">
+                        </audio>
+                    </div>
+                   
+                    <div class="col-md-12 col-lg-4" style="margin-top: 50px;">
                         <h3>Episode 4 (Snippet)</h3>
                         <p>Yale Commit WR Mason Shipp on WRs he studies and the fundementals of playing WR</p>
                         <audio controls>
@@ -82,14 +90,6 @@
                         <p>Controversial QB Draft Picks</p>
                         <audio controls>
                             <source src="Episode 3.mp3">
-                        </audio>
-                    </div>
-                   
-                    <div class="col-md-12 col-lg-4" style="margin-top: 50px;">
-                        <h3>Episode 2</h3>
-                        <p>Dak's Contract & Taysom Hill's Future</p>
-                        <audio controls>
-                            <source src="Episode 2.mp3">
                         </audio>
                     </div>
                 </div>
