--- a/index.html
+++ b/index.html
@@ -70,26 +70,26 @@
 
                 <div class="row text-center">
                     <div class="col-md-12 col-lg-4" style="margin-top: 50px;">
-                        <h3>Episode 5</h3>
-                        <p>Mahomes' Monster Contract & The Patriots' Signing of Cam Newton</p>
-                        <audio controls>
-                            <source src="Episode 5.mp3">
-                        </audio>
+                        <h3>Episode 53</h3>
+                        <p>Week 3 - Studs & Duds</p>
+                        <video controls>
+                            <source src="week3ep53.mp4">
+                        </video>
                     </div>
                    
                     <div class="col-md-12 col-lg-4" style="margin-top: 50px;">
-                        <h3>Episode 4 (Snippet)</h3>
-                        <p>Yale Commit WR Mason Shipp on WRs he studies and the fundementals of playing WR</p>
-                        <audio controls>
-                            <source src="Episode 4 - Snippet.mp3">
-                        </audio>
+                        <h3>Episode 52</h3>
+                        <p>Week 2 - No Team Is Unbeatable</p>
+                        <video controls>
+                            <source src="week2ep52.mp4">
+                        </video>
                     </div>
                    
                     <div class="col-md-12 col-lg-4" style="margin-top: 50px;">
-                        <h3>Episode 3</h3>
-                        <p>Controversial QB Draft Picks</p>
+                        <h3>Episode 51</h3>
+                        <p>Week 1 Hot Takes</p>
                         <audio controls>
-                            <source src="Episode 3.mp3">
+                            <video src="week1ep51.mp4">
                         </audio>
                     </div>
                 </div>
