--- a/index.html
+++ b/index.html
@@ -72,25 +72,25 @@
                     <div class="col-md-12 col-lg-4" style="margin-top: 50px;">
                         <h3>Episode 53</h3>
                         <p>Week 3 - Studs & Duds</p>
-                        <video controls>
-                            <source src="week3ep53.mp4">
+                        <video width="300" controls>
+                            <source src="week3ep53.mp4" type="video/mp4">
                         </video>
                     </div>
                    
                     <div class="col-md-12 col-lg-4" style="margin-top: 50px;">
                         <h3>Episode 52</h3>
                         <p>Week 2 - No Team Is Unbeatable</p>
-                        <video controls>
-                            <source src="week2ep52.mp4">
+                        <video width="300" controls>
+                            <source src="week2ep52.mp4" type="video/mp4">
                         </video>
                     </div>
                    
                     <div class="col-md-12 col-lg-4" style="margin-top: 50px;">
                         <h3>Episode 51</h3>
                         <p>Week 1 Hot Takes</p>
-                        <audio controls>
-                            <video src="week1ep51.mp4">
-                        </audio>
+                        <video width="300" controls>
+                            <source src="week1ep51.mp4" type="video/mp4">
+                        </video>
                     </div>
                 </div>
             </div>
