--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <h3>Episode 52</h3>
                         <p>Week 2 - No Team Is Unbeatable</p>
                         <video width="300" controls>
-                            <source src="week2ep52.mp4" type="video/mp4">
+                            <source src="https://github.com/thebackfieldrift/thebackfieldrift.github.io/blob/master/week2ep52.mp4?raw=true" type="video/mp4">
                         </video>
                     </div>
                    
