--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <h3>Episode 53</h3>
                         <p>Week 3 - Studs & Duds</p>
                         <video width="300" controls>
-                            <source src="week3ep53.mp4" type="video/mp4">
+                            <source src="https://github.com/thebackfieldrift/thebackfieldrift.github.io/blob/master/week3ep53.mp4?raw=true" type="video/mp4">
                         </video>
                     </div>
                    
@@ -89,7 +89,7 @@
                         <h3>Episode 51</h3>
                         <p>Week 1 Hot Takes</p>
                         <video width="300" controls>
-                            <source src="week1ep51.mp4" type="video/mp4">
+                            <source src="https://github.com/thebackfieldrift/thebackfieldrift.github.io/blob/master/week1ep51.mp4?raw=true" type="video/mp4">
                         </video>
                     </div>
                 </div>
