--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class="row">
                         <div class="col-12">
                             <a href="https://open.spotify.com/show/2joammtz5lYZXKiEBABRNv" target="_blank" style="text-decoration: none;"><button class="btn btn-success thebuttons" style="color: black;">Listen on Spotify</button></a>
-                            <a href="https://podcasts.apple.com/us/podcast/the-backfield-rift/id1518638955" target="_blank" style="text-decoration: none;"><button class="btn btn-primary thebuttons" style="margin-left: 20px; color: black;">Listen on Apple Podcats</button></a>
+                            <a href="https://podcasts.apple.com/us/podcast/the-backfield-rift/id1518638955" target="_blank" style="text-decoration: none;"><button class="btn btn-primary thebuttons" style="margin-left: 20px; color: black;">Listen on Apple Podcasts</button></a>
                         </div>
                     </div>
 
