--- a/tbrcreators.html
+++ b/tbrcreators.html
@@ -38,8 +38,8 @@
 
                     <span style="font-size: 25px;">Arnav Rastogi is a rising junior at West Windsor-Plainsboro High School South. 
                         He is an avid Saints fan and a huge football fanatic which led him to start The Backfield Rift podcast with a fellow classmate Satvik Srinivas. 
-                        Apart from the podcast, Arnav takes part in his school buisness club and investing club as part of his passion for the world of finance and buisness. 
-                        He is also the shaman of his school's fencing team. 
+                        Apart from the podcast, Arnav takes part in his school buisness club as part of his passion for the world of finance and buisness. 
+                        He is also the captain of his school's fencing team. 
                         In his free time, Arnav loves to game, play the guitar, and learn more about the world of investing.
                     
                         <br>
