--- a/tbrcreators.html
+++ b/tbrcreators.html
@@ -38,8 +38,8 @@
 
                     <span style="font-size: 25px;">Arnav Rastogi is a senior at West Windsor-Plainsboro High School South. 
                         He is an avid Saints fan and a huge football fanatic who loves to express his bold opinions on the state of the game. 
-                        Arnav's studious nature in the football film room combined with his outgoing attitude creates for some must-hear opinions.
-                        He also is the captain of the West Windsor-Plainsboro High School South fencing team.
+                        Arnav's studious nature and keen eye in the football film room combined with his outgoing attitude creates for some must-hear opinions.
+                        He also is the captain of the West Windsor-Plainsboro High School South fencing team and loves to draw parallels between the pivotal lessons one can learn across sports.
                     
                         <br>
                         
