--- a/index.html
+++ b/index.html
@@ -70,23 +70,23 @@
 
                 <div class="row text-center">
                     <div class="col-md-12 col-lg-4" style="margin-top: 50px;">
-                        <h3>Episode 55</h3>
-                        <p>Week 5 Shenanigins</p>
-                        <iframe src="https://drive.google.com/file/d/1JK6LWwAZBfM6dGxj1pbOi7qk1lOlfpIH/preview" width="300" height="170" allow="autoplay">
+                        <h3>Episode 59</h3>
+                        <p>Week 9 - Midseason Tier List</p>
+                        <iframe src="https://drive.google.com/file/d/1tddWPlNVDggTWWMFvYuV4sQhN5tjrOJH/preview" width="300" height="170" allow="autoplay">
                         </iframe>
                     </div>
                    
                     <div class="col-md-12 col-lg-4" style="margin-top: 50px;">
-                        <h3>Episode 54</h3>
-                        <p>Week 4 - Quarter Season Tier List</p>
-                        <iframe src="https://drive.google.com/file/d/1XLsE_33LLbMT7i1UDFgB6N9TMD9W5XM1/preview" width="300" height="170" allow="autoplay">
+                        <h3>Episode 58/h3>
+                        <p>Week 8 - Backups Galore</p>
+                        <iframe src="https://drive.google.com/file/d/1VXm27ccny4wM6FQnmxuqRcjCdlaPayQP/preview" width="300" height="170" allow="autoplay">
                         </iframe>
                     </div>
                    
                     <div class="col-md-12 col-lg-4" style="margin-top: 50px;">
-                        <h3>Episode 53</h3>
-                        <p>Week 3 - Studs & Duds</p>
-                        <iframe src="https://drive.google.com/file/d/173I-0_OgDNgNjP7xMr6ndeobCFsNL-QS/preview" width="300" height="170" allow="autoplay">
+                        <h3>Episode 57</h3>
+                        <p>Week 7 - The Good, The Bad, The Ugly</p>
+                        <iframe src="https://drive.google.com/file/d/1s_SUTf2pvL1VsF9v78HNqJIcmaTghy19/preview" width="300" height="170" allow="autoplay">
                         </iframe>
                     </div>
                 </div>
