--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                    
                     <div class="col-md-12 col-lg-4" style="margin-top: 50px;">
-                        <h3>Episode 58/h3>
+                        <h3>Episode 58</h3>
                         <p>Week 8 - Backups Galore</p>
                         <iframe src="https://drive.google.com/file/d/1VXm27ccny4wM6FQnmxuqRcjCdlaPayQP/preview" width="300" height="170" allow="autoplay">
                         </iframe>
